bevy_asset_loader/tests/ui_with_2d_3d_features/enum.stderr
error: AssetCollection can only be derived for a struct
  --> tests/ui_with_2d_3d_features/enum.rs:7:1
   |
 7 | / enum Test {
 8 | |     #[asset(path = "test.ogg")]
 9 | |     Asset(Handle<AudioSource>)
10 | | }
   | |_^
