bevy_asset_loader/tests/ui_with_2d_3d_features/enum.rs
use bevy_asset_loader::prelude::*;
use bevy::prelude::*;

fn main() {}

#[derive(AssetCollection, Resource)]
enum Test {
    #[asset(path = "test.ogg")]
    Asset(Handle<AudioSource>)
}
